decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
<<<<<<< HEAD
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | WhileStmt
  31       | ForStmt
  32       | ReturnStmt ';'
  33       | PrintStmt ';'
  34       | BreakStmt ';'
  35       | StmtBlock

  36  SimpleStmt : LValue '=' Expr
  37             | Call
  38             |

  39  Receiver : Expr '.'
  40           |

  41  LValue : Receiver IDENTIFIER
  42         | Expr '[' Expr ']'

  43  Call : Receiver IDENTIFIER '(' Actuals ')'

  44  Expr : LValue
  45       | Call
  46       | Constant
  47       | Expr '+' Expr
  48       | Expr '-' Expr
  49       | Expr '*' Expr
  50       | Expr '/' Expr
  51       | Expr '%' Expr
  52       | Expr EQUAL Expr
  53       | Expr NOT_EQUAL Expr
  54       | Expr '<' Expr
  55       | Expr '>' Expr
  56       | Expr LESS_EQUAL Expr
  57       | Expr GREATER_EQUAL Expr
  58       | Expr AND Expr
  59       | Expr OR Expr
  60       | '(' Expr ')'
  61       | '-' Expr
  62       | '!' Expr
  63       | READ_INTEGER '(' ')'
  64       | READ_LINE '(' ')'
  65       | THIS
  66       | NEW IDENTIFIER '(' ')'
  67       | NEW Type '[' Expr ']'
  68       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  69       | '(' CLASS IDENTIFIER ')' Expr

  70  Constant : LITERAL
  71           | NULL

  72  Actuals : ExprList
  73          |

  74  ExprList : ExprList ',' Expr
  75           | Expr

  76  WhileStmt : WHILE '(' Expr ')' Stmt

  77  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  78  BreakStmt : BREAK

  79  IfStmt : IF '(' Expr ')' Stmt ElseClause

  80  ElseClause : ELSE Stmt
  81             |

  82  ReturnStmt : RETURN Expr
  83             | RETURN

  84  PrintStmt : PRINT '(' ExprList ')'
=======
   9       | DOUBLE
  10       | STRING
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | RepeatStmt ';'
  33       | ForStmt
  34       | ReturnStmt ';'
  35       | PrintStmt ';'
  36       | BreakStmt ';'
  37       | StmtBlock

  38  SimpleStmt : LValue '=' Expr
  39             | Call
  40             |

  41  Receiver : Expr '.'
  42           |

  43  LValue : Receiver IDENTIFIER
  44         | Expr '[' Expr ']'

  45  Call : Receiver IDENTIFIER '(' Actuals ')'

  46  Expr : LValue
  47       | Call
  48       | Constant
  49       | Expr '+' Expr
  50       | Expr '-' Expr
  51       | Expr '*' Expr
  52       | Expr '/' Expr
  53       | Expr '%' Expr
  54       | Expr EQUAL Expr
  55       | Expr NOT_EQUAL Expr
  56       | Expr '<' Expr
  57       | Expr '>' Expr
  58       | Expr LESS_EQUAL Expr
  59       | Expr GREATER_EQUAL Expr
  60       | Expr AND Expr
  61       | Expr OR Expr
  62       | '(' Expr ')'
  63       | '-' Expr
  64       | '!' Expr
  65       | READ_INTEGER '(' ')'
  66       | READ_LINE '(' ')'
  67       | THIS
  68       | NEW IDENTIFIER '(' ')'
  69       | NEW Type '[' Expr ']'
  70       | '(' CLASS IDENTIFIER ')' Expr

  71  Constant : LITERAL
  72           | NULL

  73  Actuals : ExprList
  74          |

  75  ExprList : ExprList ',' Expr
  76           | Expr

  77  WhileStmt : WHILE '(' Expr ')' Stmt

  78  RepeatStmt : REPEAT Stmt UNTIL '(' Expr ')'

  79  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  80  BreakStmt : BREAK

  81  IfStmt : IF '(' Expr ')' Stmt ElseClause

  82  ElseClause : ELSE Stmt
  83             |

  84  ReturnStmt : RETURN Expr
  85             | RETURN

  86  PrintStmt : PRINT '(' ExprList ')'
>>>>>>> PA2

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
<<<<<<< HEAD
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)
=======
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)
>>>>>>> PA2

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
<<<<<<< HEAD
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14
=======
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15
>>>>>>> PA2

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
<<<<<<< HEAD
	ExtendsClause : EXTENDS . IDENTIFIER  (13)
=======
	ExtendsClause : EXTENDS . IDENTIFIER  (14)
>>>>>>> PA2

	IDENTIFIER  shift 9
	.  error


state 8
<<<<<<< HEAD
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)
=======
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)
>>>>>>> PA2

	'{'  shift 10
	.  error


state 9
<<<<<<< HEAD
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17
=======
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18
>>>>>>> PA2

	FieldList  goto 11


state 11
<<<<<<< HEAD
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)
=======
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)
>>>>>>> PA2

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
<<<<<<< HEAD
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22
=======
	DOUBLE  shift 17
	STATIC  shift 18
	'}'  shift 19
	.  error

	VariableDef  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDef  goto 23
>>>>>>> PA2


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
<<<<<<< HEAD
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
=======
	Type : STRING .  (10)

	.  reduce 10


state 16
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
>>>>>>> PA2
	.  error


state 17
<<<<<<< HEAD
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)
=======
	Type : DOUBLE .  (9)

	.  reduce 9


state 18
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)
>>>>>>> PA2

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
<<<<<<< HEAD
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
=======
	DOUBLE  shift 17
	.  error

	Type  goto 25


state 19
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 20
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 21
	VariableDef : Variable . ';'  (4)

	';'  shift 26
>>>>>>> PA2
	.  error


state 22
<<<<<<< HEAD
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
=======
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
>>>>>>> PA2
	VariableDef : Variable ';' .  (4)

	.  reduce 4


<<<<<<< HEAD
state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)
=======
state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)
>>>>>>> PA2

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
<<<<<<< HEAD
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)
=======
	DOUBLE  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)
>>>>>>> PA2

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
<<<<<<< HEAD
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
=======
	DOUBLE  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
>>>>>>> PA2
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


<<<<<<< HEAD
state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)
=======
state 39
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)
>>>>>>> PA2

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
<<<<<<< HEAD
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (38)
	Receiver : .  (40)
=======
	DOUBLE  shift 17
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (40)
	Receiver : .  (42)
>>>>>>> PA2

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
<<<<<<< HEAD
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	'{'  shift 41
	'}'  shift 62
	IDENTIFIER  reduce 40
	';'  reduce 38

	VariableDef  goto 63
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 64
	Stmt  goto 65
	SimpleStmt  goto 66
	IfStmt  goto 67
	WhileStmt  goto 68
	ForStmt  goto 69
	ReturnStmt  goto 70
	PrintStmt  goto 71
	BreakStmt  goto 72
	LValue  goto 73
	Expr  goto 74
	Call  goto 75
	Receiver  goto 76
	Constant  goto 77


state 46
	Constant : NULL .  (71)

	.  reduce 71


state 47
	Expr : THIS .  (65)

	.  reduce 65


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (76)

	'('  shift 78
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (77)

	'('  shift 79
=======
	DOUBLE  shift 17
	NULL  shift 47
	THIS  shift 48
	WHILE  shift 49
	FOR  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	PRINT  shift 55
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	REPEAT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'{'  shift 42
	'}'  shift 63
	IDENTIFIER  reduce 42
	';'  reduce 40

	VariableDef  goto 64
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 65
	Stmt  goto 66
	SimpleStmt  goto 67
	IfStmt  goto 68
	WhileStmt  goto 69
	RepeatStmt  goto 70
	ForStmt  goto 71
	ReturnStmt  goto 72
	PrintStmt  goto 73
	BreakStmt  goto 74
	LValue  goto 75
	Expr  goto 76
	Call  goto 77
	Receiver  goto 78
	Constant  goto 79


state 47
	Constant : NULL .  (72)

	.  reduce 72


state 48
	Expr : THIS .  (67)

	.  reduce 67


state 49
	WhileStmt : WHILE . '(' Expr ')' Stmt  (77)

	'('  shift 80
>>>>>>> PA2
	.  error


state 50
<<<<<<< HEAD
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (79)

	'('  shift 80
=======
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (79)

	'('  shift 81
>>>>>>> PA2
	.  error


state 51
<<<<<<< HEAD
	ReturnStmt : RETURN . Expr  (82)
	ReturnStmt : RETURN .  (83)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	IDENTIFIER  reduce 40
	';'  reduce 83

	LValue  goto 81
	Expr  goto 82
	Call  goto 83
	Receiver  goto 76
	Constant  goto 77


state 52
	BreakStmt : BREAK .  (78)

	.  reduce 78


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (66)
	Expr : NEW . Type '[' Expr ']'  (67)
=======
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (81)

	'('  shift 82
	.  error


state 52
	ReturnStmt : RETURN . Expr  (84)
	ReturnStmt : RETURN .  (85)
	Receiver : .  (42)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	IDENTIFIER  reduce 42
	';'  reduce 85

	LValue  goto 83
	Expr  goto 84
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 53
	BreakStmt : BREAK .  (80)

	.  reduce 80


state 54
	Expr : NEW . IDENTIFIER '(' ')'  (68)
	Expr : NEW . Type '[' Expr ']'  (69)
>>>>>>> PA2

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
<<<<<<< HEAD
	IDENTIFIER  shift 84
	.  error

	Type  goto 85


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (84)

	'('  shift 86
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (63)

	'('  shift 87
=======
	DOUBLE  shift 17
	IDENTIFIER  shift 86
	.  error

	Type  goto 87


state 55
	PrintStmt : PRINT . '(' ExprList ')'  (86)

	'('  shift 88
>>>>>>> PA2
	.  error


state 56
<<<<<<< HEAD
	Expr : READ_LINE . '(' ')'  (64)

	'('  shift 88
=======
	Expr : READ_INTEGER . '(' ')'  (65)

	'('  shift 89
>>>>>>> PA2
	.  error


state 57
<<<<<<< HEAD
	Constant : LITERAL .  (70)

	.  reduce 70


state 58
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (68)

	'('  shift 89
	.  error


state 59
	Expr : '-' . Expr  (61)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	IDENTIFIER  reduce 40

	LValue  goto 81
	Expr  goto 90
	Call  goto 83
	Receiver  goto 76
	Constant  goto 77


state 60
	Expr : '!' . Expr  (62)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	IDENTIFIER  reduce 40

	LValue  goto 81
	Expr  goto 91
	Call  goto 83
	Receiver  goto 76
	Constant  goto 77


state 61
	Expr : '(' . Expr ')'  (60)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (69)
	Receiver : .  (40)

	CLASS  shift 92
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 59
	'!'  shift 60
	'('  shift 61
	IDENTIFIER  reduce 40

	LValue  goto 81
	Expr  goto 93
	Call  goto 83
	Receiver  goto 76
	Constant  goto 77


state 62
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 63
	Stmt : VariableDef .  (27)

	.  reduce 27


state 64
	Stmt : StmtBlock .  (35)

	.  reduce 35


state 65
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 66
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 94
	.  error


state 67
	Stmt : IfStmt .  (29)

	.  reduce 29


state 68
	Stmt : WhileStmt .  (30)
=======
	Expr : READ_LINE . '(' ')'  (66)

	'('  shift 90
	.  error


state 58
	Constant : LITERAL .  (71)

	.  reduce 71


state 59
	RepeatStmt : REPEAT . Stmt UNTIL '(' Expr ')'  (78)
	SimpleStmt : .  (40)
	Receiver : .  (42)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	DOUBLE  shift 17
	NULL  shift 47
	THIS  shift 48
	WHILE  shift 49
	FOR  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	PRINT  shift 55
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	REPEAT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'{'  shift 42
	IDENTIFIER  reduce 42
	';'  reduce 40

	VariableDef  goto 64
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 65
	Stmt  goto 91
	SimpleStmt  goto 67
	IfStmt  goto 68
	WhileStmt  goto 69
	RepeatStmt  goto 70
	ForStmt  goto 71
	ReturnStmt  goto 72
	PrintStmt  goto 73
	BreakStmt  goto 74
	LValue  goto 75
	Expr  goto 76
	Call  goto 77
	Receiver  goto 78
	Constant  goto 79


state 60
	Expr : '-' . Expr  (63)
	Receiver : .  (42)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	IDENTIFIER  reduce 42

	LValue  goto 83
	Expr  goto 92
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 61
	Expr : '!' . Expr  (64)
	Receiver : .  (42)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	IDENTIFIER  reduce 42

	LValue  goto 83
	Expr  goto 93
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 62
	Expr : '(' . Expr ')'  (62)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (70)
	Receiver : .  (42)

	CLASS  shift 94
	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	IDENTIFIER  reduce 42

	LValue  goto 83
	Expr  goto 95
	Call  goto 85
	Receiver  goto 78
	Constant  goto 79


state 63
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 64
	Stmt : VariableDef .  (28)

	.  reduce 28


state 65
	Stmt : StmtBlock .  (37)

	.  reduce 37


state 66
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 67
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 96
	.  error


state 68
	Stmt : IfStmt .  (30)
>>>>>>> PA2

	.  reduce 30


state 69
<<<<<<< HEAD
	Stmt : ForStmt .  (31)
=======
	Stmt : WhileStmt .  (31)
>>>>>>> PA2

	.  reduce 31


state 70
<<<<<<< HEAD
	Stmt : ReturnStmt . ';'  (32)

	';'  shift 95
=======
	Stmt : RepeatStmt . ';'  (32)

	';'  shift 97
>>>>>>> PA2
	.  error


state 71
<<<<<<< HEAD
	Stmt : PrintStmt . ';'  (33)

	';'  shift 96
	.  error


state 72
	Stmt : BreakStmt . ';'  (34)

	';'  shift 97
=======
	Stmt : ForStmt .  (33)

	.  reduce 33


state 72
	Stmt : ReturnStmt . ';'  (34)

	';'  shift 98
>>>>>>> PA2
	.  error


state 73
<<<<<<< HEAD
	SimpleStmt : LValue . '=' Expr  (36)
	Expr : LValue .  (44)

	'='  shift 98
	AND  reduce 44
	OR  reduce 44
	LESS_EQUAL  reduce 44
	GREATER_EQUAL  reduce 44
	EQUAL  reduce 44
	NOT_EQUAL  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	'*'  reduce 44
	'/'  reduce 44
	'%'  reduce 44
	'>'  reduce 44
	'<'  reduce 44
	'.'  reduce 44
	'['  reduce 44


state 74
	Receiver : Expr . '.'  (39)
	LValue : Expr . '[' Expr ']'  (42)
	Expr : Expr . '+' Expr  (47)
	Expr : Expr . '-' Expr  (48)
	Expr : Expr . '*' Expr  (49)
	Expr : Expr . '/' Expr  (50)
	Expr : Expr . '%' Expr  (51)
	Expr : Expr . EQUAL Expr  (52)
	Expr : Expr . NOT_EQUAL Expr  (53)
	Expr : Expr . '<' Expr  (54)
	Expr : Expr . '>' Expr  (55)
	Expr : Expr . LESS_EQUAL Expr  (56)
	Expr : Expr . GREATER_EQUAL Expr  (57)
	Expr : Expr . AND Expr  (58)
	Expr : Expr . OR Expr  (59)
